1. implemented more javadoc comments and cleaned up the code in the modified controller classes